--- a/Desafio/Desafio.Domain/Desafio.Domain.csproj
+++ b/Desafio/Desafio.Domain/Desafio.Domain.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.22.0" />
   </ItemGroup>
 
