--- a/Desafio/Desafio.IntegrationTests/Desafio.IntegrationTests.csproj
+++ b/Desafio/Desafio.IntegrationTests/Desafio.IntegrationTests.csproj
@@ -12,6 +12,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.13" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
+    <PackageReference Include="Testcontainers" Version="3.6.0" />
+    <PackageReference Include="Testcontainers.MongoDb" Version="3.6.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -25,10 +27,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Desafio.WebAPI\Desafio.WebAPI.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="WebApplicationFactory\" />
   </ItemGroup>
 
 </Project>
