--- a/Desafio/Desafio.IntegrationTests/Desafio.IntegrationTests.csproj
+++ b/Desafio/Desafio.IntegrationTests/Desafio.IntegrationTests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.13" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
     <PackageReference Include="Testcontainers" Version="3.6.0" />
